<resources>
    <string name="app_name">PI_Android_inventaire</string>

    <!-- String utilisé dans Main Activity -->
    <string name="btn_produit">Produit</string>
    <string name="btn_reservation">Réservation</string>
    <string name="btn_compte">Compte</string>
    <string name="btn_register">S\'enregistrer</string>

    <!-- String utilisé pour les Reservation Activity -->
    <string name="btn_faireReservation">Faire une nouvelle réservation</string>
    <string name="btn_voirReservation">Voir les réservations existantes</string>

    <string name="FaireReservation_nomEtudiant">Nom Etudiant</string>
    <string name="faireReservation_label_ProduitSelect">Produit sélectionné</string>

    <string name="faireReservation_label_nomProduit">Nom du produit:</string>
    <string name="faireReservation_nomProduit">NOM PRODUIT A SET AVEC INFO RECU DE LISTE PRODUIT</string>

    <string name="faireReservation_label_quantite">Quantite:</string>
    <string name="faireReservation_quantite">2</string>

    <string name="faireReservation_label_date_remise_prevue">Date de remise:</string>

    <string name="btn_faireReservation_reserver">Réserver</string>
    <string name="btn_faireReservation_annuler">Annuler</string>

    <!-- String utilisé pour les liste de resrvation Activity -->
    <string name="row_reservations_label_nom">Nom</string>
    <string name="row_reservations_nom">Nom de la piece</string>
    <string name="row_reservations_label_categorie">Categorie</string>
    <string name="row_reservations_categorie">Nom de la categorie</string>
    <string name="row_reservations_label_qte">Quantité</string>
    <string name="row_reservations_qte">X</string>
    <string name="row_reservations_label_etat">Etat</string>
    <string name="row_reservations_etat">En Attente</string>
    <string name="btn_modifier">Modifier</string>
    <string name="btn_annuler">Annuler</string>

    <!-- String utilisé pour modifier reservation Activity -->
    <string name="modifierReservation_nomEtudiant">Nom Etudiant</string>
    <string name="modifierReservation_label_ProduitSelect">Produit sélectionné</string>
    <string name="modifierReservation_label_nomProduit">Nom du produit:</string>
    <string name="modifierReservation_nomProduit">Boutton</string>
    <string name="modifierReservation_label_quantite">Quantite</string>
    <string name="modifierReservation_quantite">X</string>
    <string name="modifierReservation_label_date">Date de remise</string>
    <string name="btn_modifierReservation_confirmer">Modifier</string>
    <string name="btn_modifierReservation_supprimer">Supprimer</string>

    <!-- String utilisé pour liste_Produits et infos produit Activity -->
    <string name="liste_Produits_nom">Nom: </string>
    <string name="liste_Produits_categorie">Catégorie: </string>
    <string name="liste_Produits_qteRestante">Quantité restante: </string>

    <!-- String utilisé pour infos_produit Activity -->
    <string name="btn_Reserver">Réserver</string>
    <string name="info_produit_description">Description</string>

    <!-- String utilisé pour les channels de notifications. -->
    <string name="default_notification_channel_id">Default</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="produit">Produit</string>
    <string name="r_servation">Réservation</string>
    <string name="compte">Compte</string>

    <!-- String utilisé pour connexion à un compte -->
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe_oubl">Mot de passe oublé</string>
    <string name="pas_enregistr_cr_er_un_compte">Pas enregistré?  Créer un compte</string>
    <string name="s_inscrire">S\'inscerire</string>
    <string name="insccription">Insccription</string>
    <string name="courriel">Courriel</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="nom">Nom</string>
    <string name="prenom">prenom</string>

    <!-- String utilisé pour Rapport Activity -->
    <string name="Rapport_nom_produit">Nom du produit:</string>
    <string name="Rapport_quantite">Quantite</string>
    <string name="Rapport_description">Description</string>
    <string name="Rapport_etat">Type de Rapport</string>
    <string name="Rapport">Rapport</string>


    <item name="btn_connexion" type="id" />
    <item name="btn_inscription" type="id" />
</resources>