<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ModifierReservation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_ModifierReservation_nomClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/modifierReservation_nomEtudiant" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_modifierReservation_produitSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modifierReservation_label_ProduitSelect" />

            <TextView
                android:id="@+id/textView_modifierReservation_label_nomProduit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/modifierReservation_label_nomProduit"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_modifierReservation_nomProduit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/modifierReservation_nomProduit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView_modifierReservation_label_quantite"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/modifierReservation_label_quantite"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_modifierReservation_label_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/modifierReservation_label_date"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextNumber_modifierReservation_quantite"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:autofillHints="Qté"
                    android:layout_marginLeft="10dp"/>/>

                <TextView
                    android:id="@+id/textView_modifierReservation_selectDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Appuyer pour choisir une date."
                    android:inputType="date" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView_modifierReservation"
                android:layout_width="match_parent"
                android:layout_height="268dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#BCBCBC"
                android:contentDescription="Image du produit"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_modifierReservation_confirmer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/btn_modifierReservation_confirmer" />

                <Button
                    android:id="@+id/btn_modifierReservation_supprimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/btn_modifierReservation_supprimer"
                    app:backgroundTint="#DA0808" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>